missing text on Open Source projects

--- a/index.html
+++ b/index.html
@@ -154,8 +154,12 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading text-uppercase">Projects</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                <h2 class="section-heading text-uppercase">Open Source Projects</h2>
+                <h3 class="section-subheading text-muted">We are not only utilizing best of Open Source tools,
+                    frameworks, components and services but we are making Research and Development of our own. We do not
+                    do yet an operating system but we have a set of API's, plugins and building and release management
+                    solutions crafted to suit many needs of modern organizations, potentially scaling them
+                    globally.</h3>
             </div>
         </div>
 
@@ -197,7 +201,8 @@
                     </div>
                     <div class="card-desc">
                         <h3>Spring Utils</h3>
-                        <p>Created for Spring Boot applications set of components and utilities that will help Developers
+                        <p>Created for Spring Boot applications set of components and utilities that will help
+                            Developers
                             to monitor the health and control dockerized applications and environment. </p>
                         <a href="https://github.com/agency-icole/spring-utils" class="btn-card">Get Now</a>
                     </div>
