--- a/index.html
+++ b/index.html
@@ -217,8 +217,14 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading text-uppercase">About</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                <h2 class="section-heading text-uppercase">The Workshop</h2>
+                <h3 class="section-subheading text-muted">We want to take your around our virtual workshop to show you
+                    that is a place where you will meet both solutions to your problems, as well as hard-working men and
+                    women.
+                    <br/><br/>
+                    From the other hand if you look for a piece of knowledge and experience that will not give you any
+                    of the Universities you could not find better place. Here you will have an opportunity to taste
+                    a real taste of projects and system made or used by top IT corporations .</h3>
             </div>
         </div>
         <div class="row">
@@ -226,12 +232,12 @@
                 <ul class="timeline">
                     <li>
                         <div class="timeline-image">
-                            <img class="rounded-circle img-fluid" src="img/about/1.jpg" alt="">
+                            <img class="rounded-circle img-fluid" src="img/workshop/workshop.jpg" alt="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>2009-2011</h4>
-                                <h4 class="subheading">Our Humble Beginnings</h4>
+                                <h4>Opening</h4>
+                                <h4 class="subheading">The taste of future</h4>
                             </div>
                             <div class="timeline-body">
                                 <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut
@@ -242,12 +248,13 @@
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image">
-                            <img class="rounded-circle img-fluid" src="img/about/2.jpg" alt="">
+                            <img class="rounded-circle img-fluid" src="img/workshop/mechanik.jpg" alt="">
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>March 2011</h4>
-                                <h4 class="subheading">An Agency is Born</h4>
+                                <h4>Top insights</h4>
+                                <h4 class="subheading">
+                                    In-depth look</h4>
                             </div>
                             <div class="timeline-body">
                                 <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut
