--- a/index.html
+++ b/index.html
@@ -178,6 +178,9 @@
                         <p>Build on top of revolutionary Portainer server it provides Java API from which you can manage
                             your whole Docker fleet.</p><br/>
                         <a href="https://github.com/agency-icole/portainer-api" class="btn-card">Get Now</a>
+                        <div class="badge text-left float-right">
+                            <p>Java API</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -192,6 +195,9 @@
                         <p>Plugin for Apache Maven building system that supports CI/CD process using Portainer API to
                             configure, deploy and manage your services in the world of Docker staks.</p>
                         <a href="https://github.com/agency-icole/portainer-plugin" class="btn-card">Get Now</a>
+                        <div class="badge text-left float-right">
+                            <p>Maven Plugin</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -207,6 +213,68 @@
                             Developers
                             to monitor the health and control dockerized applications and environment. </p>
                         <a href="https://github.com/agency-icole/spring-utils" class="btn-card">Get Now</a>
+                        <div class="badge text-left float-right">
+                            <p>Spring Toolkit</p>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- details card section starts from here -->
+        <div class="row" style="margin-top: 30px;">
+            <div class="col-md-4">
+                <div class="card-content">
+                    <div class="card-img">
+                        <img src="./img/project/build.jpg" alt="">
+                        <span><h4>0.0.2</h4></span>
+                    </div>
+                    <div class="card-desc">
+                        <h3>ICOLE Build Service</h3>
+                        <p>Build on top of revolutionary Portainer server it provides Java API from which you can manage
+                            your whole Docker fleet.</p><br/>
+                        <a href="https://github.com/agency-icole/portainer-api" class="btn-card">Get Now</a>
+                        <div class="badge text-left float-right">
+                            <p>Docker Image</p>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card-content">
+                    <div class="card-img">
+                        <img src="./img/project/engine.jpg" alt="">
+                        <span><h4>0.0.2</h4></span>
+                    </div>
+                    <div class="card-desc">
+                        <h3>ICOLE Runtime</h3>
+                        <p>Plugin for Apache Maven building system that supports CI/CD process using Portainer API to
+                            configure, deploy and manage your services in the world of Docker staks.</p>
+                        <a href="https://github.com/agency-icole/portainer-plugin" class="btn-card">Get Now</a>
+                        <div class="badge text-left float-right">
+                            <p>Docker Image</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card-content">
+                    <div class="card-img" >
+                        <img src="./img/project/puma.jpg" alt="">
+                        <span style="background-color: red"> <h4>COMING SOON</h4></span>
+                    </div>
+                    <div class="card-desc">
+                        <h3>P.U.M.A.</h3>
+                        <p>Build on top of revolutionary Portainer server it provides Java API from which you can
+                            manage
+                            your whole Docker fleet.</p><br/>
+                        <div class="badge text-left float-right">
+                            <p>Service Stak
+                            </p>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -381,10 +449,12 @@
                 <h2 class="section-heading text-uppercase">Contact Us</h2>
                 <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
             </div>
-        </div>c
+        </div>
+        c
         <div class="row">
             <div class="col-lg-12">
-                <form id="contactForm" action="https://formsubmit.co/info@icole.eu" name="sentMessage" method="POST" novalidate="novalidate">
+                <form id="contactForm" action="https://formsubmit.co/info@icole.eu" name="sentMessage" method="POST"
+                      novalidate="novalidate">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
@@ -393,13 +463,15 @@
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div class="form-group">
-                                <input class="form-control" id="email" name="email" type="email" placeholder="Your Email *"
+                                <input class="form-control" id="email" name="email" type="email"
+                                       placeholder="Your Email *"
                                        required="required"
                                        data-validation-required-message="Please enter your email address.">
                                 <p class="help-block text-danger"></p>
                             </div>
                             <div class="form-group">
-                                <input class="form-control" name="phone" id="phone" type="tel" placeholder="Your Phone *"
+                                <input class="form-control" name="phone" id="phone" type="tel"
+                                       placeholder="Your Phone *"
                                        required="required"
                                        data-validation-required-message="Please enter your phone number.">
                                 <p class="help-block text-danger"></p>
