--- a/index.html
+++ b/index.html
@@ -228,13 +228,15 @@
                 <div class="card-content">
                     <div class="card-img">
                         <img src="./img/project/build.jpg" alt="">
-                        <span><h4>0.0.2</h4></span>
+                        <span><h4>1.0.0</h4></span>
                     </div>
                     <div class="card-desc">
                         <h3>ICOLE Build Service</h3>
-                        <p>Build on top of revolutionary Portainer server it provides Java API from which you can manage
-                            your whole Docker fleet.</p><br/>
-                        <a href="https://github.com/agency-icole/portainer-api" class="btn-card">Get Now</a>
+                        <p>Our Build Service is delivered in the form of Docker image and has been designed to support
+                            GitLab
+                            Runner but can be deployed on the top of any CI/CD systems. </p><br/>
+                        <a href="https://cloud.docker.com/u/agencyicole/repository/docker/agencyicole/builder/general"
+                           class="btn-card">Get Now</a>
                         <div class="badge text-left float-right">
                             <p>Docker Image</p>
                         </div>
@@ -246,13 +248,13 @@
                 <div class="card-content">
                     <div class="card-img">
                         <img src="./img/project/engine.jpg" alt="">
-                        <span><h4>0.0.2</h4></span>
+                        <span><h4>1.2.0</h4></span>
                     </div>
                     <div class="card-desc">
                         <h3>ICOLE Runtime</h3>
-                        <p>Plugin for Apache Maven building system that supports CI/CD process using Portainer API to
-                            configure, deploy and manage your services in the world of Docker staks.</p>
-                        <a href="https://github.com/agency-icole/portainer-plugin" class="btn-card">Get Now</a>
+                        <p>We are providing unified runtime for your Spring Boot and legacy applications that come with
+                            the pre-configured monitoring stack.</p>
+                        <a href="https://hub.docker.com/r/agencyicole/runtime/" class="btn-card">Get Now</a>
                         <div class="badge text-left float-right">
                             <p>Docker Image</p>
                         </div>
@@ -261,15 +263,15 @@
             </div>
             <div class="col-md-4">
                 <div class="card-content">
-                    <div class="card-img" >
+                    <div class="card-img">
                         <img src="./img/project/puma.jpg" alt="">
                         <span style="background-color: red"> <h4>COMING SOON</h4></span>
                     </div>
                     <div class="card-desc">
                         <h3>P.U.M.A.</h3>
-                        <p>Build on top of revolutionary Portainer server it provides Java API from which you can
-                            manage
-                            your whole Docker fleet.</p><br/>
+                        <p>Our Monitoring Stack P.U.M.A comes in the form of Docker composer file that includes such
+                            pre-configured services as Grafana, Telegraf agent, Influxdb, Loki and possibility to turn
+                            on Splunk.</p><br/>
                         <div class="badge text-left float-right">
                             <p>Service Stak
                             </p>
