workshop chapter closure

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                     <div class="card-desc">
                         <h3>P.U.M.A.</h3>
                         <p>Our Monitoring Stack P.U.M.A comes in the form of Docker composer file that includes such
-                            pre-configured services as Grafana, Telegraf agent, Influxdb, Loki and possibility to turn
+                            pre-configured services as Grafana, Influxdb, Loki and possibility to turn
                             on Splunk.</p><br/>
                         <div class="badge text-left float-right">
                             <p>Service Stak
@@ -312,9 +312,9 @@
                                 <h4 class="subheading">The taste of future</h4>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut
-                                    voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit
-                                    vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                <p class="text-muted">Probably you are quite familiar with virtualization technology but
+                                    can still question yourself what is all about Docker containers and how much impact
+                                    they have on the CI/CD processes.</p>
                             </div>
                         </div>
                     </li>
@@ -329,9 +329,9 @@
                                     In-depth look</h4>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut
-                                    voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit
-                                    vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                <p class="text-muted">Working with us will be of mutual benefit. You will gain the
+                                    opportunity for deep full insights and expertise and the possibility to play with
+                                    the state of the art IT technologies.</p>
                             </div>
                         </div>
                     </li>
@@ -345,9 +345,9 @@
                                 <h4 class="subheading">Proven technologies</h4>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut
-                                    voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit
-                                    vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                <p class="text-muted">In our Workshop, we are using only proven Open Source and
+                                    commercial technologies that are used also in top IT corporations all over the
+                                    globe.</p>
                             </div>
                         </div>
                     </li>
@@ -361,9 +361,10 @@
                                 <h4 class="subheading">From laboratory to production</h4>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut
-                                    voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit
-                                    vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                <p class="text-muted">If you will decide to get in touch with our IT Reactor you will be
+                                    granted the opportunity to develop together a truly unique, customizable CI/CD
+                                    process that will automate most of the Software Development and Delivery patterns in
+                                    your projects and organization in general. </p>
                             </div>
                         </div>
                     </li>
@@ -449,7 +450,8 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading text-uppercase">Contact Us</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                <h3 class="section-subheading text-muted">Contact us if whatever you want to deploy CI/CD philosophy
+                    into your organization or you want to create one.</h3>
             </div>
         </div>
         c
@@ -527,16 +529,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-md-4">
-                <ul class="list-inline quicklinks">
-                    <li class="list-inline-item">
-                        <a href="#">Privacy Policy</a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#">Terms of Use</a>
-                    </li>
-                </ul>
-            </div>
+
         </div>
     </div>
 </footer>
