--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <a class="nav-link js-scroll-trigger" href="#about">Workshop</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#team">Join Us!</a>
+                    <a class="nav-link js-scroll-trigger" href="#join-us">Join Us!</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -381,17 +381,20 @@
     </div>
 </section>
 
-<div class="aboutus-section">
+<div class="aboutus-section" id="join-us">
     <div class="container">
         <div class="row">
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="aboutus">
                     <h2 class="aboutus-title">Join Us</h2>
-                    <p class="aboutus-text">Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat
-                        vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in.</p>
-                    <p class="aboutus-text">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit
-                        auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec
-                        sagittis sem</p>
+                    <p class="aboutus-text">If you will decide we will join hands for the work on the projects in which
+                        we will deploy CI/CD philosophy enabling the whole organization to build on the further and
+                        migrating the legacy projects.</p>
+                    <p class="aboutus-text">In our IT Reactor, you will discover many reliable services that consist of
+                        several specialized Docker nodes that run such technology stacks like GitLab, Portainer, P.U.M.A
+                        Monitoring and OSS Nexus Registry. </p>
+                    <p class="aboutus-text">During our CI/CD exercises, we will experience work together from
+                        development to testing and production and monitoring stages. </p>
 
                 </div>
             </div>
@@ -401,6 +404,7 @@
                 </div>
             </div>
             <div class="col-md-5 col-sm-6 col-xs-12">
+                <div class="text-center"><img src="img/nuclear-energy.png" style="max-width: 50px; margin: 15px"/></div>
                 <div class="feature">
                     <div class="feature-box">
                         <div class="clearfix">
@@ -409,8 +413,9 @@
                             </div>
                             <div class="feature-content">
                                 <h4>Work with heart</h4>
-                                <p>Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae,
-                                    eleifend ac, enim. Aliquam lorem ante, dapibus in.</p>
+                                <p>Inside of our IT Reactor, you will find positive synergy of friendships and openness.
+                                    Everything we do, we do with the open mind and true passion that comes from deeps of
+                                    our hearths.</p>
                             </div>
                         </div>
                     </div>
@@ -420,9 +425,10 @@
                                 <span class="glyphicon glyphicon-cog icon"></span>
                             </div>
                             <div class="feature-content">
-                                <h4>Reliable services</h4>
-                                <p>Donec vitae sapien ut libero venenatis faucibu. Nullam quis ante. Etiam sit amet orci
-                                    eget eros faucibus tincidunt</p>
+                                <h4>Nuclear Safety</h4>
+                                <p>Our P.U.M.A Monitoring Stack will make you feel like being in the hearth of the
+                                    Nuclear Plant monitoring center. We will grant you access to our Open Infrastructure
+                                    that is Open but at the same time Secure.</p>
                             </div>
                         </div>
                     </div>
@@ -433,15 +439,18 @@
                             </div>
                             <div class="feature-content">
                                 <h4>Great support</h4>
-                                <p>Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae,
-                                    eleifend ac, enim. Aliquam lorem ante, dapibus in.</p>
+                                <p>During our work-time, you will enjoy a great, friendly atmosphere that will enable
+                                    your mind to engage and understand better the whole point and details of CI/CD
+                                    philosophy.</p>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="text-center">
+                    <a  class="btn btn-primary" href="#contact"><h3>CONTACT US</h3></a>
+                </div>
             </div>
         </div>
-    </div>
 </div>
 
 <!-- Contact -->
