--- a/index.html
+++ b/index.html
@@ -522,17 +522,17 @@
             <div class="col-md-4">
                 <ul class="list-inline social-buttons">
                     <li class="list-inline-item">
-                        <a href="#">
+                        <a href="https://twitter.com/arturicoleeu1">
                             <i class="fab fa-twitter"></i>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#">
+                        <a href="https://www.facebook.com/agencyicole/">
                             <i class="fab fa-facebook-f"></i>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#">
+                        <a href="https://www.linkedin.com/company/12669939">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
                     </li>
