--- a/index.html
+++ b/index.html
@@ -380,7 +380,20 @@
         </div>
     </div>
 </section>
-
+<header class="video-header">
+    <div class="overlay"></div>
+    <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+        <source src="http://agency-icole.github.io/video/Reactor-Comming-Soon.mp4" type="video/mp4">
+    </video>
+    <div class="container h-100">
+        <div class="d-flex text-center h-100">
+            <div class="my-auto w-100 text-white">
+                <h1 class="display-3">Video Header</h1>
+                <h2>With HTML5 Video and Bootstrap 4</h2>
+            </div>
+        </div>
+    </div>
+</header>
 <div class="aboutus-section" id="join-us">
     <div class="container">
         <div class="row">
