--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 <header class="video-header">
     <div class="overlay"></div>
     <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-        <source src="http://agency-icole.github.io/video/Reactor-Comming-Soon.mp4" type="video/mp4">
+        <source src="./video/Reactor-Comming-Soon-Final.mp4" type="video/mp4">
     </video>
     <div class="container h-100">
         <div class="d-flex text-center h-100">
