--- a/index.html
+++ b/index.html
@@ -285,7 +285,19 @@
 </section>
 
 <!-- About -->
-<section class="page-section" id="about">
+
+<header class="video-header" id="about">
+    <div class="overlay"></div>
+    <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+        <source src="./video/Reactor-Comming-Soon-Final.mp4" type="video/mp4">
+    </video>
+    <div class="container h-100">
+        <div class="d-flex h-100 text-center align-items-center">
+
+        </div>
+    </div>
+</header>
+<section class="page-section">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -380,21 +392,18 @@
         </div>
     </div>
 </section>
-<header class="video-header">
+<header class="video-header" id="join-us">
     <div class="overlay"></div>
     <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
         <source src="./video/Reactor-Comming-Soon-Final.mp4" type="video/mp4">
     </video>
     <div class="container h-100">
-        <div class="d-flex text-center h-100">
-            <div class="my-auto w-100 text-white">
-                <h1 class="display-3">Video Header</h1>
-                <h2>With HTML5 Video and Bootstrap 4</h2>
-            </div>
+        <div class="d-flex h-100 text-center align-items-center">
+
         </div>
     </div>
 </header>
-<div class="aboutus-section" id="join-us">
+<div class="aboutus-section">
     <div class="container">
         <div class="row">
             <div class="col-md-3 col-sm-6 col-xs-12">
@@ -460,101 +469,104 @@
                     </div>
                 </div>
                 <div class="text-center">
-                    <a  class="btn btn-primary" href="#contact"><h3>CONTACT US</h3></a>
+                    <a class="btn btn-primary" href="#contact"><h3>CONTACT US</h3></a>
                 </div>
             </div>
         </div>
-</div>
+    </div>
 
-<!-- Contact -->
-<section class="page-section" id="contact">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading text-uppercase">Contact Us</h2>
-                <h3 class="section-subheading text-muted">Contact us if whatever you want to deploy CI/CD philosophy
-                    into your organization or you want to create one.</h3>
+    <!-- Contact -->
+    <section class="page-section" id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading text-uppercase">Contact Us</h2>
+                    <h3 class="section-subheading text-muted">Contact us if whatever you want to deploy CI/CD philosophy
+                        into your organization or you want to create one.</h3>
+                </div>
             </div>
-        </div>
-        c
-        <div class="row">
-            <div class="col-lg-12">
-                <form id="contactForm" action="https://formsubmit.co/info@icole.eu" name="sentMessage" method="POST"
-                      novalidate="novalidate">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <input class="form-control" id="name" name="name" type="text" placeholder="Your Name *"
-                                       required="required" data-validation-required-message="Please enter your name.">
-                                <p class="help-block text-danger"></p>
+            c
+            <div class="row">
+                <div class="col-lg-12">
+                    <form id="contactForm" action="https://formsubmit.co/info@icole.eu" name="sentMessage" method="POST"
+                          novalidate="novalidate">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <input class="form-control" id="name" name="name" type="text"
+                                           placeholder="Your Name *"
+                                           required="required"
+                                           data-validation-required-message="Please enter your name.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="form-group">
+                                    <input class="form-control" id="email" name="email" type="email"
+                                           placeholder="Your Email *"
+                                           required="required"
+                                           data-validation-required-message="Please enter your email address.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="form-group">
+                                    <input class="form-control" name="phone" id="phone" type="tel"
+                                           placeholder="Your Phone *"
+                                           required="required"
+                                           data-validation-required-message="Please enter your phone number.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
                             </div>
-                            <div class="form-group">
-                                <input class="form-control" id="email" name="email" type="email"
-                                       placeholder="Your Email *"
-                                       required="required"
-                                       data-validation-required-message="Please enter your email address.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" name="phone" id="phone" type="tel"
-                                       placeholder="Your Phone *"
-                                       required="required"
-                                       data-validation-required-message="Please enter your phone number.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
+                            <div class="col-md-6">
+                                <div class="form-group">
                                 <textarea class="form-control" name="message" id="message" placeholder="Your Message *"
                                           required="required"
                                           data-validation-required-message="Please enter a message."></textarea>
-                                <p class="help-block text-danger"></p>
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="clearfix"></div>
+                            <div class="col-lg-12 text-center">
+                                <div id="success"></div>
+                                <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase"
+                                        type="submit">
+                                    Send Message
+                                </button>
                             </div>
                         </div>
-                        <div class="clearfix"></div>
-                        <div class="col-lg-12 text-center">
-                            <div id="success"></div>
-                            <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">
-                                Send Message
-                            </button>
-                        </div>
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<!-- Footer -->
-<footer class="footer">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-md-4">
-                <span class="copyright">Copyright &copy; Agency Icole 2019</span>
-            </div>
-            <div class="col-md-4">
-                <ul class="list-inline social-buttons">
-                    <li class="list-inline-item">
-                        <a href="https://twitter.com/arturicoleeu1">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="https://www.facebook.com/agencyicole/">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="https://www.linkedin.com/company/12669939">
-                            <i class="fab fa-linkedin-in"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-4">
+                    <span class="copyright">Copyright &copy; Agency Icole 2019</span>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline social-buttons">
+                        <li class="list-inline-item">
+                            <a href="https://twitter.com/arturicoleeu1">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://www.facebook.com/agencyicole/">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://www.linkedin.com/company/12669939">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
 
+            </div>
         </div>
-    </div>
-</footer>
+    </footer>
 </div>
 
 <!-- Bootstrap core JavaScript -->
