--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 <header class="video-header" id="about">
     <div class="overlay"></div>
     <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-        <source src="./video/Reactor-Comming-Soon-Final.mp4" type="video/mp4">
+        <source src="./video/Reactor-JoinUs.mp4" type="video/mp4">
     </video>
     <div class="container h-100">
         <div class="d-flex h-100 text-center align-items-center">
